header overlapping issue

--- a/static/css/_detail-page.scss
+++ b/static/css/_detail-page.scss
@@ -13,7 +13,7 @@
     @media (min-width: 769px) {
       position: -webkit-sticky;
       position: sticky;
-      top: 148px;
+      top: 124px;
     }
     @media (max-width: 768px) {
       max-width: 100%;
