--- a/static/css/_header.scss
+++ b/static/css/_header.scss
@@ -4,9 +4,17 @@ header {
   position: fixed;
   width: 100%;
   z-index: 3;
+  transition: all 0.3s;
   @media (max-width: 768px) {
     padding-top: 24px;
     padding-bottom: 24px;
+  }
+  @media (min-width: 991px) {
+    &.scrollUp {
+      -webkit-transform: translateY(-100px);
+      transform: translateY(-100px);
+      transition: all 0.5s;
+    }
   }
   & > div {
     min-height: 99px;
@@ -67,6 +75,7 @@ header {
         background-color: $white;
         border-top: 0;
         border-radius: 0 0 4px 4px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.12);
         li {
           padding: 0.6rem 0;
           a {
